making repo public

--- a/index.html
+++ b/index.html
@@ -9,6 +9,37 @@
 
   <!-- Your code here -->
 
+<section class="one_column"><p>.row</p>
+</section>
+
+<section class="one_column"><p>.row</p>
+<aside class="one_third tall center"><p>Col 4</p></aside>
+<main class="two_third xtall center">
+   <p>Col 8</p>
+   <section class="one_column">
+      <p>.row</p>
+      <article class="one_twelth"><p>.col-1</p></article>
+      <article class="one_twelth"><p>.col-1</p></article>
+      <article class="one_twelth"><p>.col-1</p></article>
+      <article class="one_twelth"><p>.col-1</p></article>
+      <article class="one_twelth"><p>.col-1</p></article>
+      <article class="one_twelth"><p>.col-1</p></article>
+      <article class="one_twelth"><p>.col-1</p></article>
+      <article class="one_twelth"><p>.col-1</p></article>
+      <article class="one_twelth"><p>.col-1</p></article>
+      <article class="one_twelth"><p>.col-1</p></article>
+      <article class="one_twelth"><p>.col-1</p></article>
+      <article class="one_twelth"><p>.col-1</p></article>
+   </section>
+
+</main>
+</section>
+
+<section class="one_column ">
+   <p>.row</p>
+   <article class="one_half tall center"><p>Col 6</p></article>
+   <article class="one_half tall center"><p>Col 6</p></article>
+</section>
 
 </body>
 </html>
